SERVER-6549. Use internal permissions when ensuring index in authenticate command